tests/ui/diagnostic_namespace/do_not_recommend/do_not_apply_attribute_without_feature_flag.stderr
error[E0277]: the trait bound `(): Foo` is not satisfied
  --> $DIR/do_not_apply_attribute_without_feature_flag.rs:19:11
   |
LL |     check(());
   |     ----- ^^ the trait `Foo` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `Foo`:
             (A, B)
             (A, B, C)
             (A,)
note: required by a bound in `check`
  --> $DIR/do_not_apply_attribute_without_feature_flag.rs:16:18
   |
LL | fn check(a: impl Foo) {}
   |                  ^^^ required by this bound in `check`
help: use a unary tuple instead
   |
LL |     check(((),));
   |           +  ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
